<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sverma.otpapp.MainActivity">
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meta_information"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        />
    <!--<TextView
        android:id="@+id/tv_from_native_C"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        />-->
    <ScrollView
        android:id="@+id/parentScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tv_private_key"
                android:text="@string/rsa_private_key"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:id="@+id/tv_private_key"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scrollbars="vertical"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:labelFor="@+id/tv_public_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rsa_public_key"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:id="@+id/tv_public_key"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scrollbars="vertical"
                android:layout_marginBottom="20dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:weightSum="100">
                <TextView
                    android:layout_weight="20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/generated_otp"
                    android:labelFor="@+id/tv_encrypted_otp"
                    android:textColor="@color/colorPrimaryDark"
                    />
                <TextView
                    android:layout_weight="80"
                    android:id="@+id/tv_generate_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/encrypted_otp"
                    android:labelFor="@+id/tv_encrypted_otp"
                    android:textColor="@color/colorPrimaryDark"
                    />
                <TextView
                    android:id="@+id/tv_encrypted_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:weightSum="100">
                <TextView
                    android:layout_weight="20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/tv_decrypted_otp"
                    android:text="@string/decrypted_otp"
                    android:textColor="@color/colorPrimaryDark"
                    />
                <TextView
                    android:layout_weight="80"
                    android:id="@+id/tv_decrypted_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/btn_rsa_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/generate_rsa_key"
                android:layout_margin="10dp"
                android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:weightSum="100">
                <Button
                    android:layout_weight="50"
                    android:id="@+id/btn_generate_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/generate_otp"
                    />
                <Button
                    android:layout_weight="50"
                    android:id="@+id/btn_encrypt_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/encrypt_otp" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center|bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:weightSum="100">

                <EditText
                    android:id="@+id/et_mobile_no"
                    android:layout_weight="70"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="phone"
                    android:padding="10dp"/>
                <Button
                    android:layout_weight="30"
                    android:id="@+id/btn_send_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/send_otp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
